bitbybit-tests/tests/ui/non_exhaustive_marked_exhaustive.stderr
error: custom attribute panicked
 --> tests/ui/non_exhaustive_marked_exhaustive.rs:3:1
  |
3 | #[bitenum(u8, exhaustive: true)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: bitenum!: ranges arguments must all be ranges
